<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">日記</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="write">書込みモード</string>
    <string name="read">閲覧モード</string>
    <string name="save">保存</string>
    <string-array name="year">
      <item>2012</item>
      <item>2013</item>
      <item>2014</item>
      <item>2015</item>
      <item>2016</item>
    </string-array>
    <string-array name="month">
      <item>1</item>
      <item>2</item>
      <item>3</item>
      <item>4</item>
      <item>5</item>
      <item>6</item>
      <item>7</item>
      <item>8</item>
      <item>9</item>
      <item>10</item>
      <item>11</item>
      <item>12</item>
    </string-array>
    <string-array name="day">
      <item>1</item>
      <item>2</item>
      <item>3</item>
      <item>4</item>
      <item>5</item>
      <item>6</item>
      <item>7</item>
      <item>8</item>
      <item>9</item>
      <item>10</item>
      <item>11</item>
      <item>12</item>
      <item>13</item>
      <item>14</item>
      <item>15</item>
      <item>16</item>
      <item>17</item>
      <item>18</item>
      <item>19</item>
      <item>20</item>
      <item>21</item>
      <item>22</item>
      <item>23</item>
      <item>24</item>
      <item>25</item>
      <item>26</item>
      <item>27</item>
      <item>28</item>
      <item>29</item>
      <item>30</item>
      <item>31</item>
    </string-array>
</resources>